@@ -7,7 +7,10 @@ LEGEND
 
 
 ------
+  [-] Fixed same problems with DIGEST-MD5 SASL authentication responce
   [-] Not all messages from server archive were displayed in a view history window
+  [-] In a chat window with contact connected through transport all messages were displayed as incoming after transport change
+  [-] Fixed problems with editing of a priority of the status in the edit status dialog
 
 
 v1.2.3
